stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_body_non_println_call.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/diagnostics/body/non-println-call.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × unknown value
   ╭─[tests/fixtures/diagnostics/body/non-println-call.ml:2:3]
 1 │ fn main() {
 2 │   log("hello world")
   ·   ─────────┬────────
   ·            ╰── `log` is not bound in this scope
 3 │ }
   ╰────
  help: bind the function with `let` or define it before calling it
