stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_body_println_two_args.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/diagnostics/body/println-two-args.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × println expects 1 argument(s)
   ╭─[tests/fixtures/diagnostics/body/println-two-args.ml:2:3]
 1 │ fn main() {
 2 │   println("hello", "world")
   ·   ────────────┬────────────
   ·               ╰── found 2 argument(s)
 3 │ }
   ╰────
  help: check the call arity
