stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_call_arg_missing_comma.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/call_arg_missing_comma.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/call_arg_missing_comma.ml:2:33]
 1 │ fn main() {
 2 │   println(string_concat("token" "parser"))
   ·                                 ────┬───
   ·                                     ╰── expected `,` between function arguments
 3 │ }
   ╰────
  help: insert a comma before the next argument
