stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_invalid_char_length.snap
---
source: tests/fixtures.rs
assertion_line: 5793
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/invalid_char_length.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/invalid_char_length.ml:2:7]
 1 │ fn main() {
 2 │   dbg('ab')
   ·       ──┬─
   ·         ╰── character literal contains more than one character
 3 │ }
   ╰────
