stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_match_missing_arrow.snap
---
source: tests/fixtures.rs
assertion_line: 1275
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/match_missing_arrow.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/match_missing_arrow.ml:3:7]
 2 │   dbg(match 1 {
 3 │     1 10,
   ·       ─┬
   ·        ╰── expected `->` after match pattern
 4 │     _ -> 0
   ╰────
