stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_tuple_pattern_missing_comma.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/tuple_pattern_missing_comma.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/tuple_pattern_missing_comma.ml:4:11]
 3 │   match pair {
 4 │     (left right) -> println(left),
   ·           ──┬──
   ·             ╰── expected `,` between tuple pattern items
 5 │     _ -> println("unreachable")
   ╰────
  help: insert a comma before the next pattern
