stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_unexpected_character.snap
---
source: tests/fixtures.rs
assertion_line: 5417
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/unexpected_character.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not lex Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/unexpected_character.ml:2:7]
 1 │ fn main() {
 2 │   dbg(@)
   ·       ┬
   ·       ╰── unexpected character
 3 │ }
   ╰────
  help: stage0 currently accepts a small Riot ML subset
